--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,12 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "6.15.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "groq-sdk": "^0.30.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "prisma": "6.15.0",
-    "typescript": "^5.6.2",
-    "@types/express": "^5.0.3"
+    "typescript": "^5.6.2"
   }
 }
