--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,14 @@
   "dependencies": {
     "@prisma/client": "6.15.0",
     "express": "^5.1.0",
-    "groq-sdk": "^0.30.0"
+    "groq-sdk": "^0.30.0",
+    "multer": "^2.0.2",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
+    "@types/pdf-parse": "^1.1.5",
     "prisma": "6.15.0",
     "typescript": "^5.6.2"
   }
