--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "express": "^5.1.0",
     "groq-sdk": "^0.30.0",
     "multer": "^2.0.2",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "youtube-transcript": "^1.2.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
