--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
     "groq-sdk": "^0.30.0",
     "multer": "^2.0.2",
     "pdf-parse": "^1.1.1",
-    "youtube-transcript": "^1.2.1"
+    "youtube-caption-extractor": "^1.9.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
