--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "6.15.0",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "groq-sdk": "^0.30.0",
     "multer": "^2.0.2",
