--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "groq-sdk": "^0.30.0",
     "multer": "^2.0.2",
     "pdf-parse": "^1.1.1",
-    "youtube-caption-extractor": "^1.9.1"
+    "youtube-caption-extractor": "^1.9.1",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
