--- a/backend/package.json
+++ b/backend/package.json
@@ -14,14 +14,19 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@ai-sdk/groq": "^2.0.22",
+    "@langchain/core": "latest",
+    "@langchain/langgraph": "latest",
     "@prisma/client": "6.15.0",
+    "ai": "^5.0.56",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "groq-sdk": "^0.30.0",
     "multer": "^2.0.2",
+    "ollama-ai-provider-v2": "^1.3.1",
     "pdf-parse": "^1.1.1",
     "youtube-caption-extractor": "^1.9.1",
-    "zod": "^4.1.5"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
