--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,13 @@
     "@langchain/core": "latest",
     "@langchain/langgraph": "latest",
     "@prisma/client": "6.15.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "ai": "^5.0.56",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "groq-sdk": "^0.30.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "ollama-ai-provider-v2": "^1.3.1",
     "pdf-parse": "^1.1.1",
