--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,8 @@
     "groq-sdk": "^0.30.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "music-metadata": "^11.9.0",
+    "node-domexception": "^2.0.2",
     "ollama-ai-provider-v2": "^1.3.1",
     "pdf-parse": "^1.1.1",
     "youtube-caption-extractor": "^1.9.1",
