--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,12 @@
     "@tailwindcss/vite": "^4.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^6.28.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
   },
