--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,12 @@
     "@langchain/core": "latest",
     "@langchain/langgraph": "latest",
     "@prisma/client": "6.15.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
     "ai": "^5.0.56",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
