--- a/backend/docker/docker-compose.yaml
+++ b/backend/docker/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   db:
-    image: postgres:18
+    image: postgres:16
     container_name: quizify-db
     restart: always
     environment:
@@ -11,7 +11,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./pgdata:/var/lib/postgresql
+      - quizify_data:/var/lib/postgresql/data
 
 volumes:
   quizify_data:
