--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+  "morgan": "^1.10.0",
     "groq-sdk": "^0.30.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0",
+    "@types/morgan": "^1.9.4",
     "@types/pdf-parse": "^1.1.5",
     "prisma": "6.15.0",
     "typescript": "^5.6.2"
